config/temp/main/default/objects/Provider__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The hospital that the physician is related to</description>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Providers</relationshipLabel>
    <relationshipName>Providers</relationshipName>
    <type>Lookup</type>
</CustomField>