config/temp/main/default/objects/Provider__c/fields/Provider_Email__c.field-meta.xml
<CustomField>
    <fullName>Provider_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Phone number for provider</description>
    <label>Provider Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>