config/temp/main/default/objects/Provider__c/fields/Provider_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Provider_Phone_Number__c</fullName>
    <description>Phone number for provider</description>
    <label>Provider Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>